--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -2,9 +2,9 @@ name: Program Tests
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
   pull_request:
-    branches: [master]
+    branches: [ master ]
 
   workflow_dispatch:
     inputs:
@@ -12,9 +12,6 @@ on:
         description: 'Use Cached Dependencies'
         required: false
         default: true
-
-env:
-  CACHE: 'false'
 
 jobs:
   program-tests:
@@ -60,4 +57,5 @@ jobs:
       verify_rust: ${{ matrix.node.verify_rust }}
       cargo_test: ${{ matrix.node.cargo_test }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
-        (github.event_name != 'workflow_dispatch' && env.CACHE == 'true') }}
+        (github.event_name != 'workflow_dispatch' && false) }}
+# CHANGE `&& false` to `&& true` to default the workflow to use caching.
