--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -12,8 +12,6 @@ on:
         description: 'Use Cached Dependencies'
         required: false
         default: true
-env:
-  CACHE: 'false'
 
 jobs:
   sdk-tests:
@@ -101,4 +99,5 @@ jobs:
       build_auction_house: ${{ matrix.node.build_auction_house }}
       build_candy_machine: ${{ matrix.node.build_candy_machine }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
-        (github.event_name != 'workflow_dispatch' && env.CACHE == 'true') }}
+        (github.event_name != 'workflow_dispatch' && false) }}
+# CHANGE `&& false` to `&& true` to default the workflow to use caching.
