--- a/.github/actions/yarn-install-and-verify/action.yml
+++ b/.github/actions/yarn-install-and-verify/action.yml
@@ -10,18 +10,18 @@ inputs:
   skip_test:
     description: If true, testing is skipped. This should be used when the tests are end-to-end and thus need a locally running test-validator with deployed Rust programs.
     required: true
-  build_core:
-    description: If not false it will build the core package before running checks
-    required: true
-  build_token_metadata:
-    description: If true it will build the token_metadata package before running checks
-    required: true
-  build_auction_house:
-    description: If true it will build the auction_house package before running checks
-    required: true
-  build_candy_machine:
-    description: If true it will build the candy_machine package before running checks
-    required: true
+#  build_core:
+#    description: If not false it will build the core package before running checks
+#    required: true
+#  build_token_metadata:
+#    description: If true it will build the token_metadata package before running checks
+#    required: true
+#  build_auction_house:
+#    description: If true it will build the auction_house package before running checks
+#    required: true
+#  build_candy_machine:
+#    description: If true it will build the candy_machine package before running checks
+#    required: true
 
 description: Installs JS deps and builds the JS package, ensuring the code is valid
 
@@ -42,45 +42,45 @@ runs:
     # We avoid running build in the project root to avoid a check for a contract failing due to
     # an issue in another contract which would cause a build failure.
 
-    - name: Install and Build core
-      if: inputs.build_core == 'true'
-      run: |
-        echo 'Install and Build core: yarn install'
-        yarn install
-        echo 'Install and Build core: yarn build'
-        yarn build
-      working-directory: ./core/js
-      shell: bash
-
-    - name: Install and Build token-metadata
-      if: inputs.build_token_metadata == 'true'
-      run: |
-        echo 'Install and Build token-metadata: yarn install'
-        yarn install
-        echo 'Install and Build token-metadata: yarn build'
-        yarn build
-      working-directory: ./token-metadata/js
-      shell: bash
-
-    - name: Install and Build auction-house
-      if: inputs.build_auction_house == 'true'
-      run: |
-        echo 'Install and Build auction-house: yarn install'
-        yarn install
-        echo 'Install and Build auction-house: yarn build'
-        yarn build
-      working-directory: ./auction-house/js
-      shell: bash
-
-    - name: Install and Build candy-machine
-      if: inputs.build_candy_machine == 'true'
-      run: |
-        echo 'Install and Build candy-machine: yarn install'
-        yarn install
-        echo 'Install and Build candy-machine: yarn build'
-        yarn build
-      working-directory: ./candy-machine/js
-      shell: bash
+#    - name: Install and Build core
+#      if: inputs.build_core == 'true'
+#      run: |
+#        echo 'Install and Build core: yarn install'
+#        yarn install
+#        echo 'Install and Build core: yarn build'
+#        yarn build
+#      working-directory: ./core/js
+#      shell: bash
+#
+#    - name: Install and Build token-metadata
+#      if: inputs.build_token_metadata == 'true'
+#      run: |
+#        echo 'Install and Build token-metadata: yarn install'
+#        yarn install
+#        echo 'Install and Build token-metadata: yarn build'
+#        yarn build
+#      working-directory: ./token-metadata/js
+#      shell: bash
+#
+#    - name: Install and Build auction-house
+#      if: inputs.build_auction_house == 'true'
+#      run: |
+#        echo 'Install and Build auction-house: yarn install'
+#        yarn install
+#        echo 'Install and Build auction-house: yarn build'
+#        yarn build
+#      working-directory: ./auction-house/js
+#      shell: bash
+#
+#    - name: Install and Build candy-machine
+#      if: inputs.build_candy_machine == 'true'
+#      run: |
+#        echo 'Install and Build candy-machine: yarn install'
+#        yarn install
+#        echo 'Install and Build candy-machine: yarn build'
+#        yarn build
+#      working-directory: ./candy-machine/js
+#      shell: bash
 
     ##############
     # Verify Contract 
