--- a/.github/workflows/sdk-reusable.yml
+++ b/.github/workflows/sdk-reusable.yml
@@ -57,10 +57,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Build and install deps if needed
-      - uses: ./.github/actions/sdk
-        with:
-          name: ${{ inputs.name }}
+#      # Build and install deps if needed
+#      - uses: ./.github/actions/sdk
+#        with:
+#          name: ${{ inputs.name }}
 
       - uses: ./.github/actions/yarn-install-and-verify
         with:
