--- a/.github/actions/.integration/candy-machine-core/action.yml
+++ b/.github/actions/.integration/candy-machine-core/action.yml
@@ -22,6 +22,6 @@ runs:
       with:
         cache_id: sdk-candy-machine-core
         working_dir: ./candy-machine-core/js
-        build_token_metadata: true
-        build_auction_house: true
-        build_candy_machine: true
+#        build_token_metadata: true
+#        build_auction_house: true
+#        build_candy_machine: true
