--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -21,11 +21,15 @@ jobs:
       matrix:
         node:
           - name: "fixed-price-sale"
+            build_token_metadata: true
           - name: "hydra"
+            build_token_metadata: true
           - name: "candy-machine-core"
+            build_token_metadata: true
     uses: ./.github/workflows/integration-reusable.yml
     with:
       name: ${{ matrix.node.name }}
+      build_token_metadata: ${{ matrix.node.build_token_metadata }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
         (github.event_name != 'workflow_dispatch' && false) }}
 # CHANGE `&& false` to `&& true` to default the workflow to use caching.
