--- a/nft-packs/program/Cargo.toml
+++ b/nft-packs/program/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "mpl-nft-packs"
 version = "0.1.0"
-edition = "2021"
+authors = ["Metaplex Developers <dev@metaplex.com>"]
+repository = "https://github.com/metaplex-foundation/metaplex-program-library"
 license-file = "../../LICENSE"
+edition = "2021"
 
 [features]
 no-entrypoint = []
