--- a/token-entangler/program/Cargo.toml
+++ b/token-entangler/program/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "mpl-token-entangler"
 version = "0.1.3"
+description = "Token Entangler: entangle two NFTs together."
+authors = ["Metaplex Developers <dev@metaplex.com>"]
 edition = "2021"
 license-file = "../../LICENSE"
 
