--- a/.github/workflows/sdk-reusable.yml
+++ b/.github/workflows/sdk-reusable.yml
@@ -12,12 +12,16 @@ on:
       cache:
         required: true
         type: boolean
+      changes:
+        required: true
+        type: boolean
 
 env:
   CARGO_TERM_COLOR: always
   SOLANA_VERSION: 1.10.40
   RUST_TOOLCHAIN: stable
   CACHE: ${{ inputs.cache }}
+  CHANGES: ${{ inputs.changes }}
 
 jobs:
   changes:
@@ -48,7 +52,8 @@ jobs:
     if: |
       needs.changes.outputs.core == 'true' || 
       needs.changes.outputs.package == 'true' || 
-      needs.changes.outputs.workflow == 'true'
+      needs.changes.outputs.workflow == 'true' ||
+      env.CHANGES == 'false'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
