--- a/.github/workflows/integration-reusable.yml
+++ b/.github/workflows/integration-reusable.yml
@@ -54,7 +54,7 @@ jobs:
       needs.changes.outputs.core == 'true' ||
       needs.changes.outputs.package == 'true' ||
       needs.changes.outputs.workflow == 'true' ||
-      env.CHANGES == 'false'
+      input.changes == 'false'
     steps:
       # Setup Deps
       - uses: actions/checkout@v3
