--- a/.github/workflows/program-reusable.yml
+++ b/.github/workflows/program-reusable.yml
@@ -30,13 +30,14 @@ jobs:
   changes:
     name: Changes
     runs-on: ubuntu-latest
+    if: env.CHANGES == 'true'
     # Set job outputs to values from filter step
     outputs:
+      changes: ${{ steps }}
       core: ${{ steps.filter1.outputs.core }}
       package: ${{ steps.filter.outputs.package }}
       workflow: ${{ steps.filter.outputs.workflow }}
       action: ${{ steps.filter.outputs.action }}
-      custom: ${{ steps.auctioneer-filter.outputs.changed }}
     steps:
       - uses: actions/checkout@v3
       # For pull requests it's not necessary to checkout the code
@@ -65,12 +66,12 @@ jobs:
     runs-on: buildjet-8vcpu-ubuntu-2204
     needs: changes
     if: |
+      env.CHANGES == 'false' ||
       needs.changes.outputs.core == 'true' ||
       needs.changes.outputs.package == 'true' ||
       needs.changes.outputs.workflow == 'true' ||
       needs.changes.outputs.action == 'true' ||
       needs.changes.outputs.custom == 'true' ||
-      input.changes == 'false'
     steps:
       # Setup Deps
       - uses: actions/checkout@v3
