--- a/.github/workflows/integration-reusable.yml
+++ b/.github/workflows/integration-reusable.yml
@@ -21,13 +21,12 @@ env:
   SOLANA_VERSION: 1.10.40
   RUST_TOOLCHAIN: stable
   CACHE: ${{ inputs.cache }}
-  CHANGES: ${{ inputs.changes }}
 
 jobs:
   changes:
     name: Changes
     runs-on: ubuntu-latest
-    if: env.CHANGES == 'true'
+    if: inputs.changes == 'true'
     timeout-minutes: 10
     # Set job outputs to values from filter step
     outputs:
@@ -52,7 +51,7 @@ jobs:
     runs-on: buildjet-8vcpu-ubuntu-2004
     needs: changes
     if: |
-      env.CHANGES == 'false' ||
+      inputs.changes == 'false' ||
       needs.changes.outputs.core == 'true' ||
       needs.changes.outputs.package == 'true' ||
       needs.changes.outputs.workflow == 'true'
