--- a/.github/workflows/sdk-reusable.yml
+++ b/.github/workflows/sdk-reusable.yml
@@ -21,13 +21,12 @@ env:
   SOLANA_VERSION: 1.10.40
   RUST_TOOLCHAIN: stable
   CACHE: ${{ inputs.cache }}
-  CHANGES: ${{ inputs.changes }}
 
 jobs:
   changes:
     name: Changes
     runs-on: ubuntu-latest
-    if: env.CHANGES == 'true'
+    if: inputs.changes == 'true'
     # Set job outputs to values from filter step
     outputs:
       core: ${{ steps.filter.outputs.core }}
@@ -51,7 +50,7 @@ jobs:
     name: Build Lint and Test
     needs: changes
     if: |
-      env.CHANGES == 'false' ||
+      inputs.changes == 'false' ||
       needs.changes.outputs.core == 'true' || 
       needs.changes.outputs.package == 'true' || 
       needs.changes.outputs.workflow == 'true'
