--- a/.github/workflows/integration-reusable.yml
+++ b/.github/workflows/integration-reusable.yml
@@ -26,7 +26,7 @@ jobs:
   changes:
     name: Changes
     runs-on: ubuntu-latest
-    if: inputs.changes == 'true'
+    if: inputs.changes == true
     timeout-minutes: 10
     # Set job outputs to values from filter step
     outputs:
@@ -51,7 +51,7 @@ jobs:
     runs-on: buildjet-8vcpu-ubuntu-2004
     needs: changes
     if: |
-      inputs.changes == 'false' ||
+      inputs.changes == false ||
       needs.changes.outputs.core == 'true' ||
       needs.changes.outputs.package == 'true' ||
       needs.changes.outputs.workflow == 'true'
