--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -41,7 +41,7 @@ jobs:
     with:
       name: ${{ matrix.node.name }}
       cargo_test: ${{ matrix.node.cargo_test == '' || 
-        (matrix.node.cargo_test != '' && matrix.node.cargo_test == 123) }}
+        (matrix.node.cargo_test != '' && false) }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
         (github.event_name != 'workflow_dispatch' && false) }}
 # CHANGE `&& false` to `&& true` to default the workflow to use caching.
