--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -40,8 +40,7 @@ jobs:
     uses: ./.github/workflows/program-reusable.yml
     with:
       name: ${{ matrix.node.name }}
-      cargo_test: ${{ fromJSON(matrix.node.cargo_test) == '' || 
-        (matrix.node.cargo_test != '' && false) }}
+      cargo_test: ${{ fromJSON(matrix.node.cargo_test) == 123 }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
         (github.event_name != 'workflow_dispatch' && false) }}
 # CHANGE `&& false` to `&& true` to default the workflow to use caching.
