testing something again urg

--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -37,10 +37,15 @@ jobs:
 #          - name: "token-entangler"
 #          - name: "token-metadata"
 
+# true != ''
+# false == ''
+# nothing == ''
+
     uses: ./.github/workflows/program-reusable.yml
     with:
       name: ${{ matrix.node.name }}
-      cargo_test: ${{ matrix.node.cargo_test == '' }}
+      cargo_test: ${{ matrix.node.cargo_test == 'true' }}
+#      cargo_test: ${{ matrix.node.cargo_test == '' }}
 #      cargo_test: ${{ fromJSON(matrix.node.cargo_test) == '' }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
         (github.event_name != 'workflow_dispatch' && false) }}
