testing something again urg

--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -38,15 +38,20 @@ jobs:
 #          - name: "token-metadata"
 
 # true != ''
+# true != 'true'
+
 # false == ''
+# false != 'true'
+
 # nothing == ''
+# nothing != 'true'
+
 
     uses: ./.github/workflows/program-reusable.yml
     with:
       name: ${{ matrix.node.name }}
-      cargo_test: ${{ matrix.node.cargo_test == 'true' }}
 #      cargo_test: ${{ matrix.node.cargo_test == '' }}
-#      cargo_test: ${{ fromJSON(matrix.node.cargo_test) == '' }}
+      cargo_test: ${{ fromJSON(matrix.node.cargo_test) == 'true' }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
         (github.event_name != 'workflow_dispatch' && false) }}
 # CHANGE `&& false` to `&& true` to default the workflow to use caching.
