--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -53,9 +53,9 @@ jobs:
       cargo_test: ${{ !contains(matrix.node.cargo_test, 'false') }}
 #      cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
 #        (github.event_name != 'workflow_dispatch' && false) }}
-#      cache: ${{ contains(github.event.workflow_dispatch.inputs.cache, 'true') }}
-      cache: ${{ false }}
+      cache: ${{ contains(github.event.workflow_dispatch.inputs.cache, 'true') }}
 # CHANGE `&& false` to `&& true` to default the workflow to use caching.
-      changes: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.changes == 'true') ||
-        (github.event_name != 'workflow_dispatch' && true) }}
+#      changes: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.changes == 'true') ||
+#        (github.event_name != 'workflow_dispatch' && true) }}
+      changes: ${{ false }}
 # CHANGE `&& true` to `&& false` to default the workflow to run regardless of whether the files changed.
