--- a/.github/workflows/program-reusable.yml
+++ b/.github/workflows/program-reusable.yml
@@ -26,13 +26,13 @@ jobs:
   changes:
     name: Changes
     runs-on: ubuntu-latest
-    if: inputs.changes == true
     # Set job outputs to values from filter step
     outputs:
       core: ${{ steps.filter1.outputs.core }}
       package: ${{ steps.filter.outputs.package }}
       workflow: ${{ steps.filter.outputs.workflow }}
       action: ${{ steps.filter.outputs.action }}
+      custom: ${{ steps.auctioneer-filter.outputs.changed }}
     steps:
       - uses: actions/checkout@v3
       # For pull requests it's not necessary to checkout the code
