--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,18 +25,11 @@ jobs:
       matrix:
         node:
           - name: "fixed-price-sale"
-            build_token_metadata: true
           - name: "hydra"
-            build_token_metadata: true
           - name: "candy-machine-core"
-            build_token_metadata: true
     uses: ./.github/workflows/integration-reusable.yml
     with:
       name: ${{ matrix.node.name }}
-      build_token_metadata: ${{ matrix.node.build_token_metadata }}
-      cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
-        (github.event_name != 'workflow_dispatch' && false) }}
-# CHANGE `&& false` to `&& true` to default the workflow to use caching.
-      changes: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.changes == 'true') ||
-        (github.event_name != 'workflow_dispatch' && true) }}
-# CHANGE `&& true` to `&& false` to default the workflow to run regardless of whether the files changed.
+      build_token_metadata: ${{ !contains(matrix.node.build_token_metadata, 'false') }}
+      cache: ${{ contains(github.event.workflow_dispatch.inputs.cache, 'true') }}
+      changes: ${{ !contains(github.event.workflow_dispatch.inputs.changes, 'false') }}
