--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -25,33 +25,23 @@ jobs:
       matrix:
         node:
           - name: "auction-house"
-            skip_test: false
           - name: "candy-machine"
-            skip_test: false
           - name: "candy-machine-core"
             skip_test: true
           - name: "core"
-            skip_test: false
           - name: "fixed-price-sale"
             skip_test: true
           - name: "gumdrop"
-            skip_test: false
           - name: "hydra"
             skip_test: true
           - name: "nft-packs"
             skip_test: true
           - name: "token-entangler"
-            skip_test: false
           - name: "token-metadata"
-            skip_test: false
 
     uses: ./.github/workflows/sdk-reusable.yml
     with:
       name: ${{ matrix.node.name }}
-      skip_test: ${{ matrix.node.skip_test }}
-      cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
-        (github.event_name != 'workflow_dispatch' && false) }}
-# CHANGE `&& false` to `&& true` to default the workflow to use caching.
-      changes: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.changes == 'true') ||
-        (github.event_name != 'workflow_dispatch' && true) }}
-# CHANGE `&& true` to `&& false` to default the workflow to run regardless of whether the files changed.
+      skip_test: ${{ contains(matrix.node.skip_test, 'true') }}
+      cache: ${{ contains(github.event.workflow_dispatch.inputs.cache, 'true') }}
+      changes: ${{ !contains(github.event.workflow_dispatch.inputs.changes, 'false') }}
