--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -41,5 +41,5 @@ jobs:
     with:
       name: ${{ matrix.node.name }}
       cargo_test: ${{ !contains(matrix.node.cargo_test, 'false') }}
-      cache: ${{ contains(github.event.workflow_dispatch.inputs.cache, 'true') }}
-      changes: ${{ !contains(github.event.workflow_dispatch.inputs.changes, 'false') }}
+      cache: ${{ contains(github.event.workflow_dispatch.inputs.cache, true) }}
+      changes: ${{ !contains(github.event.workflow_dispatch.inputs.changes, false) }}
