--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -10,12 +10,12 @@ on:
     inputs:
       cache:
         description: 'Use Cached Dependencies'
-        required: false
-        default: true
+        required: true
+        type: boolean
       changes:
         description: 'Only run when files change'
-        required: false
-        default: false
+        required: true
+        type: boolean
 
 jobs:
   sdk-tests:
@@ -43,5 +43,5 @@ jobs:
     with:
       name: ${{ matrix.node.name }}
       skip_test: ${{ contains(matrix.node.skip_test, 'true') }}
-      cache: ${{ contains(github.event.workflow_dispatch.inputs.cache, 'true') }}
-      changes: ${{ !contains(github.event.workflow_dispatch.inputs.changes, 'false') }}
+      cache: ${{ contains(inputs.cache, 'true') }}
+      changes: ${{ !contains(inputs.changes, 'false') }}
