--- a/token-entangler/js/package.json
+++ b/token-entangler/js/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@metaplex-foundation/mpl-token-entangler",
-  "version": "0.0.0",
-  "description": "Metaplex Token Entangler SDK",
+  "version": "0.1.0",
+  "programVersion": "0.1.3",
+  "description": "MPL Token Entangler JavaScript API.",
   "main": "dist/src/mpl-token-entangler.js",
   "types": "dist/src/mpl-token-entangler.d.ts",
   "scripts": {
@@ -38,21 +39,21 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@metaplex-foundation/beet": "^0.1.0",
-    "@metaplex-foundation/beet-solana": "^0.1.1",
-    "@solana/spl-token": "^0.3.5",
-    "@solana/web3.js": "^1.35.1"
+    "@metaplex-foundation/beet": "^0.7.1",
+    "@metaplex-foundation/beet-solana": "^0.4.0",
+    "@solana/spl-token": "^0.3.6",
+    "@solana/web3.js": "^1.66.2"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "@metaplex-foundation/solita": "^0.5.0",
     "@types/tape": "^4.13.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "eslint": "^8.3.0",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "rimraf": "^3.0.2",
     "tape": "^5.5.2",
-    "typescript": "^4.6.2"
+    "typescript": "^4.8.4"
   }
 }
