auction house and auctioneer stuff

--- a/.github/actions/yarn-install-and-verify/action.yml
+++ b/.github/actions/yarn-install-and-verify/action.yml
@@ -25,6 +25,13 @@ runs:
     ##############
     # Verify Contract 
     ##############
+    - name: Install Root Modules
+      run: |
+        echo 'Install Root Modules: yarn install'
+        yarn install
+      working-directory: ./
+      shell: bash
+
     - name: Install modules
       run: yarn install
       working-directory: ${{ inputs.working_dir }}
