--- a/auction-house/js/tsconfig.json
+++ b/auction-house/js/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "./tsconfig.build.json",
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "rootDir": "."
+    "outDir": "./dist",
+    "baseUrl": "."
   },
   "include": ["./src", "test"]
 }
