--- a/auctioneer/js/package.json
+++ b/auctioneer/js/package.json
@@ -47,14 +47,6 @@
     "bn.js": "^5.2.0"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@metaplex-foundation/solita": "^0.7.0",
-    "eslint": "^8.3.0",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.6.2"
+    "@metaplex-foundation/solita": "^0.7.0"
   }
 }
