--- a/auctioneer/js/tsconfig.json
+++ b/auctioneer/js/tsconfig.json
@@ -1,7 +1,10 @@
 {
-  "extends": "./tsconfig.build.json",
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
+    "outDir": "./dist",
     "rootDir": "."
   },
-  "include": ["./src", "test"]
+  "include": [
+    "./src"
+  ]
 }
