--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -25,6 +25,7 @@ jobs:
       matrix:
         node:
           - name: "auction-house"
+          - name: "auctioneer"
           - name: "candy-machine"
           - name: "candy-machine-core"
             skip_test: true
