--- a/.github/actions/yarn-install-and-build/action.yml
+++ b/.github/actions/yarn-install-and-build/action.yml
@@ -23,9 +23,7 @@ runs:
     # Build Contract 
     ##############
     - name: Install Root Modules
-      run: |
-        echo 'Install Root Modules: yarn install'
-        yarn install
+      run: yarn install
       working-directory: ./
       shell: bash
 
