--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -24,16 +24,16 @@ jobs:
       fail-fast: false
       matrix:
         node:
-          - name: "auction-house"
-          - name: "auctioneer"
-          - name: "bubblegum"
-          - name: "candy-machine"
-          - name: "fixed-price-sale"
-          - name: "gumdrop"
-          - name: "hydra"
-          - name: "nft-packs"
-          - name: "token-entangler"
-          - name: "token-metadata"
+#          - name: "auction-house"
+#          - name: "auctioneer"
+#          - name: "bubblegum"
+#          - name: "candy-machine"
+#          - name: "fixed-price-sale"
+#          - name: "gumdrop"
+#          - name: "hydra"
+#          - name: "nft-packs"
+#          - name: "token-entangler"
+#          - name: "token-metadata"
 
     uses: ./.github/workflows/program-reusable.yml
     with:
