--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Metaplex Maintainers <contact@metaplex.com>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "hello": "echo 'hello'"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
