--- a/package.json
+++ b/package.json
@@ -16,10 +16,6 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4",
-    "rimraf": "^3.0.2",
-    "tape": "^5.6.1",
-    "@types/tape": "^4.13.2",
-    "spok": "^1.4.3"
+    "typescript": "^4.8.4"
   }
 }
