--- a/.github/actions/yarn-install-and-build/action.yml
+++ b/.github/actions/yarn-install-and-build/action.yml
@@ -22,6 +22,11 @@ runs:
     ##############
     # Build Contract 
     ##############
+    - name: Install Root Modules
+      run: yarn install
+      working-directory: ./
+      shell: bash
+
     - name: Install modules
       run: yarn install
       working-directory: ${{ inputs.working_dir }}
