--- a/.github/actions/yarn-install-and-verify/action.yml
+++ b/.github/actions/yarn-install-and-verify/action.yml
@@ -25,6 +25,11 @@ runs:
     ##############
     # Verify Contract 
     ##############
+    - name: Install Root Modules
+      run: yarn install
+      working-directory: ./
+      shell: bash
+
     - name: Install modules
       run: yarn install
       working-directory: ${{ inputs.working_dir }}
